<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.github.paulosalonso</groupId>
	<artifactId>research</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>research</name>
	<description>Research API</description>

	<properties>
		<java.version>11</java.version>

		<jacoco.version>0.8.5</jacoco.version>

		<skip.unit.tests>false</skip.unit.tests>
		<skip.it.tests>false</skip.it.tests>
		<line.coverage>1.00</line.coverage>
		<branch.coverage>1.00</branch.coverage>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<skipTests>${skip.unit.tests}</skipTests>
					<argLine> ${argLine} --illegal-access=permit </argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<argLine>
						<!--  ${argLine} - necessário para funcionar o jacoco corretamente -->
						${argLine} --illegal-access=permit
					</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<classesDirectory>${project.build.outputDirectory}</classesDirectory>
							<skipTests>${skip.it.tests}</skipTests>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/ResearchApplication.*</exclude>
						<exclude>**/ResearchSpecificationFactory.*</exclude><!-- TODO - Cobrir com teste integrado -->
						<exclude>**/QuestionSpecificationFactory.*</exclude><!-- TODO - Cobrir com teste integrado -->
						<exclude>**/OptionSpecificationFactory.*</exclude><!-- TODO - Cobrir com teste integrado -->
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${line.coverage}</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>${branch.coverage}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

<!--			<plugin>-->
<!--				<groupId>org.pitest</groupId>-->
<!--				<artifactId>pitest-maven</artifactId>-->
<!--				<version>1.5.2</version>-->
<!--				<dependencies>-->
<!--					<dependency>-->
<!--						<groupId>org.pitest</groupId>-->
<!--						<artifactId>pitest-junit5-plugin</artifactId>-->
<!--						<version>0.12</version>-->
<!--					</dependency>-->
<!--				</dependencies>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<phase>test</phase>-->
<!--						<goals>-->
<!--							<goal>mutationCoverage</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--				<configuration>-->
<!--					<mutationThreshold>100</mutationThreshold>-->
<!--					<targetClasses>-->
<!--						<param>com.github.paulosalonso.research.*</param>-->
<!--					</targetClasses>-->
<!--					<targetTests>-->
<!--						<param>com.github.paulosalonso.research.*</param>-->
<!--					</targetTests>-->
<!--				</configuration>-->
<!--			</plugin>-->
		</plugins>
	</build>

</project>
